syntax = "proto3";

option go_package = "./productproto";

service ProductService{
    rpc CreateProduct(CreateReq) returns(CreateRes);
    rpc GetByIdProduct(ProductResponse) returns(Product);
    rpc GetAllProducts(Empty) returns(ListProduct);
    rpc UpdateProduct(Product) returns(CreateRes);
    rpc DeleteProduct(ProductResponse) returns(CreateRes);
}

message Product{
    string      id          = 1;
    string      name        = 2;
    string      description = 3;
    float       price       = 4;
}

message ProductResponse{
    string      id          = 1;
}

message CreateReq{
    string      name        = 1;
    string      description = 2;
    float       price       = 3;
}

message CreateRes{
    string      message     = 1;
}

message Empty{}

message ListProduct{
    repeated Product     product     = 1;
}